--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,10 @@
-<h1>
-  hello world!
-</h1>
+<form accept-charset="UTF-8" actions="/users" >
+<label for="username">Username: </label>
+<input id="username" name="username" type="text"><br>
+<label for="email">Email: </label>
+<input id="email" name="email" type="email"><br>
+<label for="password">Password: </label>
+<input id="password" name="password" type="password"><br>
+
+<input type="submit" value="submit">
+</form>
