--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,12 @@
-<form accept-charset="UTF-8" actions="/users" >
-<label for="username">Username: </label>
-<input id="username" name="username" type="text"><br>
-<label for="email">Email: </label>
-<input id="email" name="email" type="email"><br>
-<label for="password">Password: </label>
-<input id="password" name="password" type="password"><br>
+<form accept-charset="UTF-8" action="/users" method="post">
 
-<input type="submit" value="submit">
-</form>
+  <label for="username">Username:</label>
+  <input type="text" id="username" name="user[username]"><br><br>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="user[email]"><br><br>
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="user[password]"><br><br>
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+
+  <input type="submit" value="Submit">
+</form> 
