--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, :url => user_path(@user), :html: {:method => :put} do |f|%>
+<%= form_for @user, url: users_path(@user), html: { method: :put } do |f|%>
   <%= f.label :username, 'Uername you want to edit' %> <br>
   <%= f.text_field :username %> <br> <br>
   <%= f.label :email,'Email you want to edit' %> <br> 
