Fixed flash messages and added password validation

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,4 +13,7 @@
   <%= f.password_field :password %> <br>
   <br>
   <%= f.submit "Submit" %>
+
+  <p class="flash"><%= flash.notice %></p>
+
 <%end%>
